GNOME Bugzilla – Bug 737498
multiqueue: doesn't take GAP event into account when calculating current level
Last modified: 2014-10-14 07:44:04 UTC
Created attachment 287259 [details] [review] Patch Current time is calculated as delta between stream time of sink and src segments. Incoming and outgoing buffers update segment position, but gap events don't. This can cause deadlock when buffers are sparse.
Comment on attachment 287259 [details] [review] Patch Update segment position for GAP events just like it is done for buffers
commit 594e2f06685fe8d4ef88869d608061d41e5e8979 Author: Sebastian Dröge <sebastian@centricular.com> Date: Thu Oct 2 11:00:32 2014 +0300 queue: update segment position on GAP events to calculate levels properly https://bugzilla.gnome.org/show_bug.cgi?id=737498 commit 03376a208660d0d4d5521f310395bfa1052ba062 Author: Sebastian Dröge <sebastian@centricular.com> Date: Thu Oct 2 10:57:43 2014 +0300 queue2: update segment position on GAP events to calculate levels properly https://bugzilla.gnome.org/show_bug.cgi?id=737498 commit b5bf41a771c8e3c3a5afa2ea8049f1779a270c74 Author: Matej Knopp <matej.knopp@gmail.com> Date: Sat Sep 27 20:10:34 2014 +0200 multiqueue: update segment position on GAP events to calculate levels properly https://bugzilla.gnome.org/show_bug.cgi?id=737498