multiqueue: update segment position on GAP events to calculate levels properly

https://bugzilla.gnome.org/show_bug.cgi?id=737498